--- a/angular17-main/package.json
+++ b/angular17-main/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.2",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
