--- a/angular17-main/package.json
+++ b/angular17-main/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "bootstrap": "^5.3.2",
+    "firebase": "^10.12.2",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jspdf": "^2.5.1",
